Major version update. - Upgrade all compiler tools to latest versions. - Update `uglify-js` with `uglify-es`. - Removed standalone React.js compiler. - Removed reactify plugin to Browserify. - Added babelify plugin to Browserify, with ES2015 and React JSX support activated. - Updated test project with support for latest React.js.

--- a/tests/test_project/www-dev/index.html
+++ b/tests/test_project/www-dev/index.html
@@ -818,15 +818,10 @@
     <script type="text/javascript" src="js/vendor.js"></script>
     <script type="text/javascript" src="js/jslib.js"></script>
     <script type="text/javascript" src="js/website.js"></script>
-    <script type="text/javascript">
-      var React = require('react');
-    </script>
     <script type="text/javascript" src="js/reactjsx.js"></script>
     <script type="text/javascript">
-      React.render(
-          React.createElement(Component, {}),
-          document.getElementById('reactjs-component')
-      );
+        var react = require('reactjsx');
+        react.renderReact('reactjs-component');
     </script>
   </body>
 </html>
