Add support for Node 18 & update all NPM packages to their latest versions - Replace "cssmin" with "clean-css" - Replace "node-sass" with "sass" - Replace "uglify-es" with "uglify-js" - Remove support for "bless" (split CSS for IE9 support)

--- a/tests/test_project/www-dev/index.html
+++ b/tests/test_project/www-dev/index.html
@@ -8,6 +8,7 @@
     <meta name="keywords" content="" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="css/base-scss.css" />
     <link rel="stylesheet" type="text/css" href="css/base.css" />
       <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
       <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -25,6 +26,8 @@
       <p class="lead">Borrowed from <a href="http://www.bootstrapzero.com/bootstrap-template/full-example">http://www.bootstrapzero.com/bootstrap-template/full-example</a></p>
 
       <div class="page-header">
+        <h3 class="less-style">LESS Styling</h3>
+        <h3 class="sass-style">SASS Styling</h3>
         <h3>ReactJS Test</h3>
         <div id="reactjs-component"></div>
       </div>
